--- a/index.html
+++ b/index.html
@@ -273,9 +273,10 @@
             </form>
         </div>
     </div>
-     <div class="w3-half vh-100 contact-bg d-flex flex-column justify-content-center align-items-center" id="links">
+    
     <footer class="footer">
-        <div class="container text-center">
+        <div class="w3-half vh-100 contact-bg d-flex flex-column justify-content-center align-items-center" id="links">
+<!--         <div class="container text-center"> -->
             <a href="https://www.facebook.com/suniladhikari42"><i class="fa fa-facebook"></i></a>
             <a href="https://twitter.com/adh_sunil"><i class="fa fa-twitter"></i></a>
             <a href="https://www.linkedin.com/in/sunil-adhikari-b5172019a/"><i class="fa fa-linkedin"></i></a>
@@ -283,7 +284,6 @@
             <a href="https://www.instagram.com/suniladhikari90"><i class="fa fa-instagram"></i></a>
         </div>
     </footer>
-     </div>
 
     <!-- Show toast notifications -->
     <div class="toast-container" id="toastContainer"></div>
