--- a/index.html
+++ b/index.html
@@ -275,8 +275,7 @@
     </div>
     
     <footer class="footer">
-        <div class="w3-half vh-100 contact-bg d-flex flex-column justify-content-center align-items-center" id="links">
-<!--         <div class="container text-center"> -->
+        <div class="container text-center" id ="links">
             <a href="https://www.facebook.com/suniladhikari42"><i class="fa fa-facebook"></i></a>
             <a href="https://twitter.com/adh_sunil"><i class="fa fa-twitter"></i></a>
             <a href="https://www.linkedin.com/in/sunil-adhikari-b5172019a/"><i class="fa fa-linkedin"></i></a>
