--- a/index.html
+++ b/index.html
@@ -161,8 +161,7 @@
                     miner in the
                     concerned subject. I am keen and enthusiast to learn technology. I have been in the field
                     since
-                    10 years.I
-                    am also learning Python and Django in IT Training, Kathmandu, Nepal.</p>
+                    10 years.I learnt Python and Django in one of the top ranked training center in Kathmandu, Nepal.</p>
             </div>
         </div>
     </div>
@@ -176,9 +175,7 @@
                 <p class="text-justify">I have one year experience of teaching basic level in the reputed
                     institution of
                     the country.
-                    I have worked as beginner front end developer using html and css. I learnt Python and
-                    Django in one
-                    of the top ranked training center of capital city of Nepal.
+                    I have worked as beginner front end developer using html and css.
                 </p>
                 <p class="text-justify">
                     I did my internship from Dibtech Nepal of Baneshwor, Kathmandu, Nepal.
