--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
                     I have worked as beginner front end developer using html and css.
                 </p>
                 <p class="text-justify">
-                    I did my internship from Dibtech Nepal of Baneshwor, Kathmandu, Nepal.
-                    Currently I am working as Python Developer at Flaresight located at Kuleshwor, Kathmandu, Nepal. My role is backend
+                    I did my internship from Dibtech Nepal situated at Baneshwor, Kathmandu, Nepal.
+                    Currently, I am working as Python Developer at Flaresight located at Kuleshwor, Kathmandu, Nepal. My role is backend
                     developer using django framework
                     here. Microservice APIs are made in Django Rest Framework under this role.
                 </p>
