--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
     
     <footer class="footer">
         <div class="container text-center" id ="links">
-            <a href="https://www.facebook.com/suniladhikari42"><i class="fa fa-facebook"></i></a>
-            <a href="https://twitter.com/adh_sunil"><i class="fa fa-twitter"></i></a>
-            <a href="https://www.linkedin.com/in/sunil-adhikari-b5172019a/"><i class="fa fa-linkedin"></i></a>
-            <a href="https://www.youtube.com/@suniladhikari2815"><i class="fa fa-youtube"></i></a>
-            <a href="https://www.instagram.com/suniladhikari90"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.facebook.com/suniladhikari42"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://twitter.com/adh_sunil"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/sunil-adhikari-b5172019a/"><i class="fa-brands  fa-linkedin"></i></a>
+            <a href="https://www.youtube.com/@suniladhikari2815"><i class="fa-brands fa-youtube"></i>/a>
+            <a href="https://www.instagram.com/suniladhikari90"><i class="fa-brands  fa-instagram"></i></a>
         </div>
     </footer>
 
