--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <link rel="shortcut icon" href="Image/favicon.png" type="image/x-icon">
 
 <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" /> -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js@1.7.0/dist/toastify.min.css">
@@ -161,7 +165,8 @@
                     miner in the
                     concerned subject. I am keen and enthusiast to learn technology. I have been in the field
                     since
-                    10 years.I learnt Python and Django in one of the top ranked training center in Kathmandu, Nepal.</p>
+                    10 years.I learnt Python and Django in one of the top ranked training center in Kathmandu, Nepal.
+                </p>
             </div>
         </div>
     </div>
@@ -179,7 +184,8 @@
                 </p>
                 <p class="text-justify">
                     I did my internship from Dibtech Nepal situated at Baneshwor, Kathmandu, Nepal.
-                    Currently, I am working as Python Developer at Flaresight located at Kuleshwor, Kathmandu, Nepal. My role is backend
+                    Currently, I am working as Python Developer at Flaresight located at Kuleshwor, Kathmandu, Nepal. My
+                    role is backend
                     developer using django framework
                     here. Microservice APIs are made in Django Rest Framework under this role.
                 </p>
@@ -270,14 +276,14 @@
             </form>
         </div>
     </div>
-    
+
     <footer class="footer">
-        <div class="container text-center" id ="links">
+        <div class="container text-center" id="links">
             <a href="https://www.facebook.com/suniladhikari42"><i class="fa-brands fa-facebook"></i></a>
             <a href="https://twitter.com/adh_sunil"><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://www.linkedin.com/in/sunil-adhikari-b5172019a/"><i class="fa-brands  fa-linkedin"></i></a>
-            <a href="https://www.youtube.com/@suniladhikari2815"><i class="fa-brands fa-youtube"></i>/a>
-            <a href="https://www.instagram.com/suniladhikari90"><i class="fa-brands  fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/sunil-adhikari-b5172019a/"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.youtube.com/@suniladhikari2815"><i class="fa-brands fa-youtube"></i></a>
+            <a href="https://www.instagram.com/suniladhikari90"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </footer>
 
